sit-323-HD-task/K8s/journal-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journal-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journal-service
  template:
    metadata:
      labels:
        app: journal-service
    spec:
      containers:
        - name: journal-service
          image: sizhewang0916/sit-323-hd:journal-service
          ports:
            - containerPort: 8082
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8082
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8082
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: journal-service
spec:
  type: ClusterIP
  ports:
    - port: 8082
      targetPort: 8082
  selector:
    app: journal-service
