sit-323-HD-task/K8s/mongo-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
  selector:
    app: mongodb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi

#apiVersion: v1
#kind: Secret
#metadata:
#  name: mongodb-secret
#type: Opaque
#data:
#  mongo-root-username: cm9vdHVzZXI=
#  mongo-root-password: cm9vdHBhc3M=
#
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: mongodb
#spec:
#  ports:
#    - port: 27017
#      targetPort: 27017
#  clusterIP: None
#  selector:
#    app: mongodb
#
#---
#apiVersion: apps/v1
#kind: StatefulSet
#metadata:
#  name: mongodb
#spec:
#  serviceName: mongodb
#  replicas: 3
#  selector:
#    matchLabels:
#      app: mongodb
#  template:
#    metadata:
#      labels:
#        app: mongodb
#    spec:
#      containers:
#        - name: mongo
#          image: mongo:latest
#          command:
#            - mongod
#            - --replSet
#            - rs0
#            - --bind_ip_all
#          env:
#            - name: MONGO_INITDB_ROOT_USERNAME
#              valueFrom:
#                secretKeyRef:
#                  name: mongodb-secret
#                  key: mongo-root-username
#            - name: MONGO_INITDB_ROOT_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: mongodb-secret
#                  key: mongo-root-password
#          ports:
#            - containerPort: 27017
#          volumeMounts:
#            - name: mongo-data
#              mountPath: /data/db
#          resources:
#            requests:
#              memory: "512Mi"
#              cpu: "500m"
#            limits:
#              memory: "1Gi"
#              cpu: "1"
#  volumeClaimTemplates:
#    - metadata:
#        name: mongo-data
#      spec:
#        accessModes: [ "ReadWriteOnce" ]
#        resources:
#          requests:
#            storage: 1Gi
