sit-323-HD-task/K8s/schedule-service-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schedule-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schedule-service
  template:
    metadata:
      labels:
        app: schedule-service
    spec:
      containers:
        - name: schedule-service
          image: sizhewang0916/sit-323-hd:schedule-service
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8083
            initialDelaySeconds: 15
            timeoutSeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8083
            initialDelaySeconds: 5
            timeoutSeconds: 3
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: schedule-service
spec:
  type: ClusterIP
  ports:
    - port: 8083
      targetPort: 8083
  selector:
    app: schedule-service
