sit-323-HD-task/K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ingress-webapps"
spec:
#  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /journal
            pathType: Prefix
            backend:
              service:
                name: journal-service
                port:
                  number: 8082
          - path: /schedule
            pathType: Prefix
            backend:
              service:
                name: schedule-service
                port:
                  number: 8083
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
